tranformer, estimator, PolynomialFeatures

--- a/lab_ml/ml05_regression.ipynb
+++ b/lab_ml/ml05_regression.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOaynCdGBNFzstYmsypaTq5",
+      "authorship_tag": "ABX9TyPyHhAwgtnJKbQiqUd3H5dw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4230,13 +4230,438 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "## 선형 회귀에서의 행렬 곱 응용"
+      ],
       "metadata": {
-        "id": "8w7bf_jSJqCm"
+        "id": "XJEJ8XyePlwp"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x_train_poly.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8w7bf_jSJqCm",
+        "outputId": "6a5cdb82-e4a5-43e1-8e8a-44d979e51369"
       },
-      "execution_count": null,
+      "execution_count": 152,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(42, 2)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 152
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "coef = lin_reg.coef_\n",
+        "coef.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CWh4KCGjPrtR",
+        "outputId": "5da21123-e740-4532-8494-4f20a9fc5725"
+      },
+      "execution_count": 153,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(2,)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 153
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "intercept = lin_reg.intercept_\n",
+        "print(intercept)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6Z0JE6NaQLCL",
+        "outputId": "0bc04c83-977b-46e0-a22b-fd1b63857be8"
+      },
+      "execution_count": 154,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "116.0502107827827\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x_train_poly @ coef + intercept  # (42, 2) @ (2,) -> (42,)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "z1vDBeqlP1Ig",
+        "outputId": "71596b13-818c-4d7b-99eb-1d2f3768210b"
+      },
+      "execution_count": 155,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([  83.18070434,  132.71260219,   67.61880901,   48.04150559,\n",
+              "        654.5393253 ,  211.05965467,  876.66458663,  818.09027497,\n",
+              "       1064.55950693,  132.71260219,   90.62455496,  132.71260219,\n",
+              "        182.91530629,  290.29593158, 1064.55950693,  876.66458663,\n",
+              "        182.91530629,  110.65424646,  290.29593158,  876.66458663,\n",
+              "        500.20932803,  257.07992265,  680.52990177,   11.08663218,\n",
+              "        149.3605064 ,   20.90606071,  707.0276443 ,  604.07967051,\n",
+              "        332.83297906,  169.60388118,  818.09027497,  110.65424646,\n",
+              "        156.79962213,  132.71260219, 1131.24847547,  144.50252913,\n",
+              "         72.62352767,  707.0276443 ,  132.71260219,  228.92002253,\n",
+              "        999.89920261,  579.6105922 ])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 155
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_pred"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FqF6AzJjQQwR",
+        "outputId": "028e0402-d79e-42f8-982b-658258c726c3"
+      },
+      "execution_count": 156,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([  83.18070434,  132.71260219,   67.61880901,   48.04150559,\n",
+              "        654.5393253 ,  211.05965467,  876.66458663,  818.09027497,\n",
+              "       1064.55950693,  132.71260219,   90.62455496,  132.71260219,\n",
+              "        182.91530629,  290.29593158, 1064.55950693,  876.66458663,\n",
+              "        182.91530629,  110.65424646,  290.29593158,  876.66458663,\n",
+              "        500.20932803,  257.07992265,  680.52990177,   11.08663218,\n",
+              "        149.3605064 ,   20.90606071,  707.0276443 ,  604.07967051,\n",
+              "        332.83297906,  169.60388118,  818.09027497,  110.65424646,\n",
+              "        156.79962213,  132.71260219, 1131.24847547,  144.50252913,\n",
+              "         72.62352767,  707.0276443 ,  132.71260219,  228.92002253,\n",
+              "        999.89920261,  579.6105922 ])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 156
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Pipeline\n",
+        "\n",
+        "변환기와 추정기(예측기)를 연결해 주는 클래스."
+      ],
+      "metadata": {
+        "id": "J9DH_Cj3TKtC"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "scikit-learn 패키지의 클래스:\n",
+        "*   변환기(tranformer)\n",
+        "    *   `fit, fit_transform, transform` 메서드들을 가지고 있음.\n",
+        "    *   주로 데이터 전처리(preprocessing) 과정에서 사용.\n",
+        "    *   예: `StandardScaler, MinMaxScaler, PolynomialFeature, ...`\n",
+        "*   추정기(estimator)\n",
+        "    *   `fit, predict, score` 메서드들을 가지고 있음.\n",
+        "    *   ML(분류, 회귀, 군집화, ...) 알고리즘을 구현한 클래스.\n",
+        "    *   예: `KNeighborsClassifier, KNeighborsRegressor, LinearRegression, ...`"
+      ],
+      "metadata": {
+        "id": "6z_gWPI7TZGv"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## PolynomialFeatures 클래스"
+      ],
+      "metadata": {
+        "id": "VE0SMdoWWCBh"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "x_train.shape, x_test.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AR1TpFZLQcfx",
+        "outputId": "dbecdcbe-07d1-4997-9dda-6b85bf04118e"
+      },
+      "execution_count": 157,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "((42, 1), (14, 1))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 157
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "poly = PolynomialFeatures(include_bias=False)  # 객체 생성"
+      ],
+      "metadata": {
+        "id": "JRTjJYuYWLrz"
+      },
+      "execution_count": 158,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "result = poly.fit_transform(X=x_train)  # 훈련 셋에서는 fit -> transform."
+      ],
+      "metadata": {
+        "id": "_gC6CwcvWhUU"
+      },
+      "execution_count": 159,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "result.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rU-QWs9OWpnS",
+        "outputId": "580c02ad-0750-4cd3-99bf-f3fa18044c8e"
+      },
+      "execution_count": 160,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(42, 2)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 160
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "result[:6]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mMpXmiu5Wqoj",
+        "outputId": "edb824d9-0d89-4663-8736-b8de214ef6c9"
+      },
+      "execution_count": 161,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[  19.6 ,  384.16],\n",
+              "       [  22.  ,  484.  ],\n",
+              "       [  18.7 ,  349.69],\n",
+              "       [  17.4 ,  302.76],\n",
+              "       [  36.  , 1296.  ],\n",
+              "       [  25.  ,  625.  ]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 161
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "poly.get_feature_names_out()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6tO2iSEVW2ey",
+        "outputId": "4250a3c4-d0ca-43fc-8be0-2fbe9db24dc3"
+      },
+      "execution_count": 162,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array(['x0', 'x0^2'], dtype=object)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 162
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "poly_3 = PolynomialFeatures(degree=3, include_bias=False)\n",
+        "result = poly_3.fit_transform(X=x_train)  # 훈련 셋은 fit -> transform"
+      ],
+      "metadata": {
+        "id": "TXABhpxiXrQv"
+      },
+      "execution_count": 166,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "poly_3.get_feature_names_out()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ElERLj6uX1-1",
+        "outputId": "f759273a-520d-4065-8579-1aa1982600db"
+      },
+      "execution_count": 167,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array(['x0', 'x0^2', 'x0^3'], dtype=object)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 167
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "result[:6]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "k0sU3RBPX58s",
+        "outputId": "7751c83b-258b-4689-eedc-adc2490647c5"
+      },
+      "execution_count": 168,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[1.960000e+01, 3.841600e+02, 7.529536e+03],\n",
+              "       [2.200000e+01, 4.840000e+02, 1.064800e+04],\n",
+              "       [1.870000e+01, 3.496900e+02, 6.539203e+03],\n",
+              "       [1.740000e+01, 3.027600e+02, 5.268024e+03],\n",
+              "       [3.600000e+01, 1.296000e+03, 4.665600e+04],\n",
+              "       [2.500000e+01, 6.250000e+02, 1.562500e+04]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 168
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "poly_3.transform(X=x_test)  # 테스트 셋에서는 transform 메서드만 호출!"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3HnqaaYWYkmr",
+        "outputId": "f3ce844e-77c6-4f56-da71-dfd35389054a"
+      },
+      "execution_count": 169,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[8.4000000e+00, 7.0560000e+01, 5.9270400e+02],\n",
+              "       [1.8000000e+01, 3.2400000e+02, 5.8320000e+03],\n",
+              "       [2.7500000e+01, 7.5625000e+02, 2.0796875e+04],\n",
+              "       [2.1300000e+01, 4.5369000e+02, 9.6635970e+03],\n",
+              "       [2.2500000e+01, 5.0625000e+02, 1.1390625e+04],\n",
+              "       [4.0000000e+01, 1.6000000e+03, 6.4000000e+04],\n",
+              "       [3.0000000e+01, 9.0000000e+02, 2.7000000e+04],\n",
+              "       [2.4600000e+01, 6.0516000e+02, 1.4886936e+04],\n",
+              "       [3.9000000e+01, 1.5210000e+03, 5.9319000e+04],\n",
+              "       [2.1000000e+01, 4.4100000e+02, 9.2610000e+03],\n",
+              "       [4.3500000e+01, 1.8922500e+03, 8.2312875e+04],\n",
+              "       [1.6200000e+01, 2.6244000e+02, 4.2515280e+03],\n",
+              "       [2.8000000e+01, 7.8400000e+02, 2.1952000e+04],\n",
+              "       [2.7300000e+01, 7.4529000e+02, 2.0346417e+04]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 169
+        }
+      ]
     }
   ]
 }
