--- a/lab_ml/ml05_regression.ipynb
+++ b/lab_ml/ml05_regression.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPyHhAwgtnJKbQiqUd3H5dw",
+      "authorship_tag": "ABX9TyPF3aGLzCC8A0tefrMQXr5+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4179,7 +4179,7 @@
     {
       "cell_type": "code",
       "source": [
-        "b = b.reshape((3, 1))([14, 32])\n",
+        "b = b.reshape((3, 1))\n",
         "print(b)  # (3, 1) shape"
       ],
       "metadata": {
