--- a/lab_ml/ml05_regression.ipynb
+++ b/lab_ml/ml05_regression.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMMTdSqGJ51497dfQ7v06kU",
+      "authorship_tag": "ABX9TyNUASo/30yGqlsKre10d6Tv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5702,6 +5702,93 @@
           },
           "metadata": {},
           "execution_count": 177
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "`fit` 메서드 호출 후 Pipeline 객체에서는 각각의 파이프(변환기, 추정기)를 찾을 수 있고, 각각의 파이프에서 속성(변수, 메서드)들을 사용할 수 있음."
+      ],
+      "metadata": {
+        "id": "kdNdZFMZ1o2b"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pipe['poly'].get_feature_names_out()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ahn4X-tr19kP",
+        "outputId": "00d206eb-e41c-48ff-9a7c-8ece7262c1a2"
+      },
+      "execution_count": 179,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array(['x0', 'x0^2'], dtype=object)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 179
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pipe['reg'].coef_"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JqN2ZEZ_2juL",
+        "outputId": "3e64160b-950d-407e-d82e-358c59f99023"
+      },
+      "execution_count": 181,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([-21.55792498,   1.01433211])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 181
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pipe['reg'].intercept_"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZOPfxjvI2ot-",
+        "outputId": "d60e37c7-4e04-4ec7-850d-d8cc9d388cc2"
+      },
+      "execution_count": 182,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "np.float64(116.05021078278395)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 182
         }
       ]
     }
