--- a/lab_ml/ml06_regularization.ipynb
+++ b/lab_ml/ml06_regularization.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNavy5fzd3RhBh1t7v5JqXv",
+      "authorship_tag": "ABX9TyOJQykTVV0HHpXjpulVw1pX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4100,7 +4100,7 @@
         "*   머신 러닝의 목적은 비용 함수(cost function)/손실 함수(loss function)을 최소화하는 것.\n",
         "\n",
         "\n",
-        "*   선형 회귀(linear regression)의 목적은 MSE(mean_squared_error)를 최소로 만드는 계수들($w_0, ..., w_m$)을 찾는 것. 즉, 선형 회귀의 비용 함수는 MSE(w).\n",
+        "*   선형 회귀(linear regression)의 목적은 MSE(mean squared errors)를 최소로 만드는 계수들($w_0, ..., w_m$)을 찾는 것. 즉, 선형 회귀의 비용 함수는 $ MSE(w) $ .\n",
         "$$\n",
         "J(w) = MSE(w)\n",
         "     = \\dfrac{1}{N} \\sum_{i=1}^{N} (y_i - \\hat{y_i})^2\n",
