Ridge(l2), Lasso(l1), ElasticNet

--- a/lab_ml/ml06_regularization.ipynb
+++ b/lab_ml/ml06_regularization.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOJQykTVV0HHpXjpulVw1pX",
+      "authorship_tag": "ABX9TyNGVFKeCxHzfL6xMhbDKDii",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4139,6 +4139,8 @@
         "> ElasticNet은 Ridge 규제와 Lasso 규제의 효과를 모두 가지고 있음.\n",
         "\n",
         "*   Ridge, Lasso에서 $\\alpha$ 값이 크면 규제가 강해지고, $\\alpha$ 값이 작으면 규제가 약해짐($ \\alpha \\ge 0 $).\n",
+        "    *   $\\alpha$ 값이 커지면, 규제가 커지고, 손실이 증가하고, 과대적합이 줄어듦.\n",
+        "    *   $\\alpha$ 값이 작아지면, 규제가 작아지고, 손실이 감소하고, 과대적합이 커짐.\n",
         "*   ElasticNet에서 $\\alpha$는 규제의 크기를 의미하고, $r$은 `l1` 규제의 비율($0 \\le r \\le 1$)을 의미함.\n"
       ],
       "metadata": {
