learning rate(학습률) 하이퍼 파라미터

--- a/lab_ml/ml07_gradient_descent.ipynb
+++ b/lab_ml/ml07_gradient_descent.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMjH4Akq0CZ3OAwONZmJ2EU",
+      "authorship_tag": "ABX9TyNhp8s7gmysbspofYCF6FLY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -486,6 +486,25 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**학습률(learning rate)** 하이퍼 파라미터\n",
+        "\n",
+        "*   학습률이 작은 경우에는 최솟값을 향해서 천천히 움직임.\n",
+        "*   학습률이 큰 경우에는 최솟값을 향해서 빠르게 또는 불안정하게 움직임.\n",
+        "*   학습률이 너무 작으면 최대 반복 횟수(max_iter) 안에서 최솟값의 위치로 수렴(convergence)하지 못할 수도 있음.\n",
+        "    *   학습률을 더 크게 만듦.\n",
+        "    *   최대 반복 횟수(max_iter)를 늘려줌.\n",
+        "    *   수렴 기준(tolerance)를 더 크게 만듦.\n",
+        "*   학습률이 너무 크면 수렴하지 못하고 발산(divergence)하는 경우가 생기기도 함.\n",
+        "    *   학습률을 줄여야 함.\n",
+        "*   머신 러닝 알고리즘들 중에서는 처음에는 학습률을 크게 하고, 반복이 진행될 때마다 학습률을 점진적으로 줄여 나가는 방식으로 데이터를 학습하는 알고리즘도 있음.\n"
+      ],
+      "metadata": {
+        "id": "o9tphPNSMstV"
+      }
     }
   ]
 }
