--- a/lab_ml/ml07_gradient_descent.ipynb
+++ b/lab_ml/ml07_gradient_descent.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOM7QYYPjLur2MBCpUYXcF7",
+      "authorship_tag": "ABX9TyMe4tA1qZAh6buQ6tU98a14",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1548,12 +1548,55 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "max_iterations = 1_000_000_000  # 최대 반복 횟수\n",
+        "learning_rates = ['constant', 'invscaling', 'adaptive']  # 학습률 변경 방법\n",
+        "eta0s = [0.01, 0.1, 0.3, 0.5, 1.0]  # 초기 학습률\n",
+        "\n",
+        "for lr in learning_rates:\n",
+        "    for eta in eta0s:\n",
+        "        # SGD 회귀 모델을 생성\n",
+        "        sgd = SGDRegressor(max_iter=max_iterations, learning_rate=lr, eta0=eta,\n",
+        "                           random_state=42)\n",
+        "        # 모델 훈련\n",
+        "        sgd.fit(X=x_train, y=y_train)\n",
+        "        # 훈련 셋 결정계수\n",
+        "        train_score = sgd.score(X=x_train, y=y_train)\n",
+        "        # 테스트 셋 결정계수\n",
+        "        test_score = sgd.score(X=x_test, y=y_test)\n",
+        "        print(f'learning rate={lr}, eta0={eta}, train r2={train_score:.2e}, test r2={test_score:.2e}')"
+      ],
       "metadata": {
-        "id": "UGv1Aw15fYxJ"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UGv1Aw15fYxJ",
+        "outputId": "2ef86bc8-0a1b-4b14-e32b-5edf41812cab"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "learning rate=constant, eta0=0.01, train r2=-4.25e+20, test r2=-4.58e+20\n",
+            "learning rate=constant, eta0=0.1, train r2=-6.13e+22, test r2=-6.60e+22\n",
+            "learning rate=constant, eta0=0.3, train r2=-5.32e+23, test r2=-5.72e+23\n",
+            "learning rate=constant, eta0=0.5, train r2=-3.76e+23, test r2=-4.06e+23\n",
+            "learning rate=constant, eta0=1.0, train r2=-5.96e+24, test r2=-6.42e+24\n",
+            "learning rate=invscaling, eta0=0.01, train r2=-1.48e+13, test r2=-1.65e+13\n",
+            "learning rate=invscaling, eta0=0.1, train r2=-8.94e+20, test r2=-9.60e+20\n",
+            "learning rate=invscaling, eta0=0.3, train r2=-1.07e+21, test r2=-1.14e+21\n",
+            "learning rate=invscaling, eta0=0.5, train r2=-5.04e+21, test r2=-5.41e+21\n",
+            "learning rate=invscaling, eta0=1.0, train r2=-1.85e+22, test r2=-1.99e+22\n",
+            "learning rate=adaptive, eta0=0.01, train r2=9.15e-01, test r2=6.98e-01\n",
+            "learning rate=adaptive, eta0=0.1, train r2=9.20e-01, test r2=8.68e-01\n",
+            "learning rate=adaptive, eta0=0.3, train r2=-4.95e+18, test r2=-8.17e+18\n",
+            "learning rate=adaptive, eta0=0.5, train r2=-6.79e+18, test r2=-1.12e+19\n",
+            "learning rate=adaptive, eta0=1.0, train r2=-6.79e+18, test r2=-1.12e+19\n"
+          ]
+        }
+      ]
     }
   ]
 }
