--- a/lab_ml/ml08_logistic_regression.ipynb
+++ b/lab_ml/ml08_logistic_regression.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNP2vCLUW7+oAdzNrjzLCW4",
+      "authorship_tag": "ABX9TyPCt7tq27LSM5zDf5sgTZI6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1676,7 +1676,47 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Logistic Regression"
+        "**Logistic Regression**\n",
+        "\n",
+        "*   선형 회귀\n",
+        "$$\n",
+        "z_i = w_0 + x_{i1} \\cdot w_1 + x_{i2} \\cdot w_2 + \\cdots = w_0 + \\sum_j x_{ij} \\cdot w_j\n",
+        "$$\n",
+        "\n",
+        "*   선형 회귀 공식으로 계산된 결과를 logistic 함수의 argument로 전달\n",
+        "$$\n",
+        "p_i = \\phi(z_i) = \\dfrac{1}{1 + e^{-z}}\n",
+        "    = \\dfrac{1}{1 + exp(-(w_0 + \\sum_j x_{ij} \\cdot w_j))}\n",
+        "$$\n",
+        "\n",
+        "*   Sigmoid(Logistic) 함수의 리턴값은 항상 0 ~ 1이므로, Logistic Regression은 logistic 함수의 리턴값을 양성이 될 확률로 해석.\n",
+        "*   Logistic Regression에서 훈련(학습)이란 훈련 데이터로부터 아래의 비용 함수를 최소화하는 파라미터들($w_0$, $w_1$, ...)을 찾는 과정.\n",
+        "\n",
+        "*   다중 클래스 분류에스는 softmax 함수를 클래스 $i$가 될 확률로 정의.\n",
+        "$$\n",
+        "\\mathrm{softmax}{\\mathbf(z)}_i = \\dfrac{e^{z_i}}{\\sum_{j=1}^{k} e^{z_j}}, \\quad i = 1, \\dots, k\n",
+        "$$\n",
+        "\n",
+        "\n",
+        "**비용(손실) 함수(cost/loss function)**\n",
+        "\n",
+        "*   이진 분류에서는 손실 함수 log loss가 최소가 되는 계수들을 찾는 것이 목적.\n",
+        "*   Logistic loss function(**log loss**)\n",
+        "\n",
+        ">>   $ L = -[y \\log{p} + (1-y) \\log{(1-p)}] $\n",
+        "\n",
+        ">>   $ J(W) = - \\dfrac{1}{N} \\sum_{i=1}^{N} [y^{(i)} \\log({p}^{(i)}) + (1-y^{(i)}) \\log(1 - {p}^{(i)})] $\n",
+        "\n",
+        ">>   N: the number of samples\n",
+        "\n",
+        "*   다중 클래스 분류에서는 비용 함수 크로스 엔트로피가 최소가 되는 계수들을 찾는 것이 목적.\n",
+        "*   __Cross entropy__ cost function\n",
+        "\n",
+        ">>   $ J(W) = - \\dfrac{1}{N} \\sum_{i=1}^{N} \\sum_{k=1}^{m} y_{k}^{(i)} \\log({p}_{k}^{(i)}) $\n",
+        "\n",
+        ">>   N: the number of samples\n",
+        "\n",
+        ">>   m: the number of classes"
       ],
       "metadata": {
         "id": "AWttoVGb4lLx"
