--- a/lab_ml/ml10_tree.ipynb
+++ b/lab_ml/ml10_tree.ipynb
@@ -4,8 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyPf6On0ijmdgOmwcot2/WEt",
+      "authorship_tag": "ABX9TyPuFPW4NpkaVOal6WtzqexX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -813,7 +812,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 363
+          "height": 388
         },
         "id": "ZlHQ0XCT1bku",
         "outputId": "d34c53ae-7402-40c9-ce79-b75b881afdda"
@@ -1781,7 +1780,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 981
+          "height": 961
         },
         "id": "1kwop9-OEkCb",
         "outputId": "83534f64-3f56-4d5f-c475-03b111a981e8"
@@ -1799,6 +1798,32 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Decision Tree를 나누는 기준\n",
+        "\n",
+        "---\n",
+        "\n",
+        "**Gini impurity(Gini 불순도)**\n",
+        "\n",
+        "$$\n",
+        "Gini = 1 - \\sum_i p_i^2\n",
+        "$$\n",
+        "\n",
+        "*   $ p_i $: i번째 클래스가 될 확률\n",
+        "*   이진(binary-class) 분류\n",
+        "    *   $ Gini = 1 - (p_0^2 + p_1^2) $\n",
+        "    *   양성(positive) 또는 음성(negative)으로 완벽하게 분류가 된 경우, $ Gini = 1 - 1 = 0 $.\n",
+        "        *   Gini 불순도 최소.\n",
+        "    *   양성과 음성이 똑같은 비율로 섞여 있는 경우, $ Gini = 1 - (0.5^2 + 0.5^2) = 0.5 $.\n",
+        "        *   Gini 불순도 최대.\n",
+        "    *   양성과 음성의 비율이 6:4인 경우, $ Gini = 1 - (0.6^2 + 0.4^2) = 0.48 $"
+      ],
+      "metadata": {
+        "id": "tvUiVwNnQbeO"
+      }
     }
   ]
 }
