--- a/lab_ml/ml10_tree.ipynb
+++ b/lab_ml/ml10_tree.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPuFPW4NpkaVOal6WtzqexX",
+      "authorship_tag": "ABX9TyMqI5m1iv3fXpzMJ4xv8hPf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1802,7 +1802,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Decision Tree를 나누는 기준\n",
+        "**Decision Tree를 나누는 기준**\n",
         "\n",
         "---\n",
         "\n",
@@ -1819,7 +1819,46 @@
         "        *   Gini 불순도 최소.\n",
         "    *   양성과 음성이 똑같은 비율로 섞여 있는 경우, $ Gini = 1 - (0.5^2 + 0.5^2) = 0.5 $.\n",
         "        *   Gini 불순도 최대.\n",
-        "    *   양성과 음성의 비율이 6:4인 경우, $ Gini = 1 - (0.6^2 + 0.4^2) = 0.48 $"
+        "    *   양성과 음성의 비율이 6:4인 경우, $ Gini = 1 - (0.6^2 + 0.4^2) = 0.48 $\n",
+        "*   Decision tree는 부모 노드와 자식 노드의 gini 불순도 차이가 가능한 커지도록 가지를 성장시킴.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "**Entropy(엔트로피)**\n",
+        "\n",
+        "$$\n",
+        "Entropy = -\\sum_i p_i \\log_k (p_i)\n",
+        "$$\n",
+        "\n",
+        "*   $k$: 클래스의 개수(이진 분류인 경우, k=2).\n",
+        "*   $p_i$: $i$번째 클래스가 될 확률.\n",
+        "*   이진 분류\n",
+        "    *   양성과 음성의 비율이 1:1인 경우, Entropy = 1. 엔트로피 최대.\n",
+        "    *   양성 또는 음성으로 완벽히 분류된 경우, Entropy = 0. 엔트로피 최소.\n",
+        "*   Decision tree 객체를 생성할 때 criterion='entropy'라고 설정하면, 부모 노드와 자식 노드에서의 엔트로피 차이가 가능하면 커지도록 가지를 생성함.\n",
+        "\n",
+        "---\n",
+        "\n",
+        "**Decision Tree 특징**\n",
+        "\n",
+        "*   장점:\n",
+        "    *   특성들을 스케일링할 필요가 없다.\n",
+        "    *   결과를 이해하기 쉽다.\n",
+        "*   단점:\n",
+        "    *   과적합(overfitting)되기가 쉽다.\n",
+        "    *   여러가지 규제들을 적용해서 과적합 문제를 해결해야 함.\n",
+        "*   규제 하이퍼 파라미터(hyperparameter) - 생성자의 파라미터들\n",
+        "    *   `max_depth`: decision tree의 최대 깊이.\n",
+        "    *   `max_leaf_node`: leaf node의 최댓값.\n",
+        "    *   `max_features`: 각 노드에서 분할에 사용할 특성의 최대 개수.\n",
+        "    *   `min_samples_split`: 노드가 분할되기 위해서 가져야 할 최소 샘플 개수.\n",
+        "    *   `min_samples_leaf`: leaf 노드가 가져야 할 최소 샘플 개수.\n",
+        "    *   `max_`로 시작하는 파라미터의 값을 증가시키면, 트리의 크기가 커짐.\n",
+        "        *   규제가 작아짐.\n",
+        "        *   overfitting이 커짐.\n",
+        "    *   `max_`로 시작하는 파라미터 값을 감소시키면, 트리의 크기가 작아지기 때문에 overfitting이 작아짐.\n",
+        "    *   `min_`으로 시작하는 파라미터 값을 증가시키면, 트리의 크기가 작아짐.\n",
+        "    "
       ],
       "metadata": {
         "id": "tvUiVwNnQbeO"
