--- a/lab_ml/ml10_tree.ipynb
+++ b/lab_ml/ml10_tree.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMqI5m1iv3fXpzMJ4xv8hPf",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyOMJG9A+w6NNd1JG8HWucVM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -97,7 +98,7 @@
           "height": 255
         },
         "id": "3ufkIIwuwdh7",
-        "outputId": "4212cf0b-c081-4cc9-fd61-9c4dd6c50c3f"
+        "outputId": "b89a9351-f754-47a1-c08b-1f8437549fcb"
       },
       "execution_count": 4,
       "outputs": [
@@ -115,7 +116,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-47d4853b-b7cb-4b93-8aed-d9238e72fa0f\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-a924d201-ab66-436d-9550-dd61a0ac2386\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -189,7 +190,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-47d4853b-b7cb-4b93-8aed-d9238e72fa0f')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a924d201-ab66-436d-9550-dd61a0ac2386')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -241,12 +242,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-47d4853b-b7cb-4b93-8aed-d9238e72fa0f button.colab-df-convert');\n",
+              "        document.querySelector('#df-a924d201-ab66-436d-9550-dd61a0ac2386 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-47d4853b-b7cb-4b93-8aed-d9238e72fa0f');\n",
+              "        const element = document.querySelector('#df-a924d201-ab66-436d-9550-dd61a0ac2386');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -291,7 +292,7 @@
           "height": 255
         },
         "id": "vsjgimEmwjLq",
-        "outputId": "e2ac3dc0-ae80-487d-bfb3-b7f7b5bcb428"
+        "outputId": "10d9904c-8c7f-4af5-bb14-8c0becf3d043"
       },
       "execution_count": 5,
       "outputs": [
@@ -309,7 +310,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-af18278c-8237-42a9-a3af-0c59ca7a73a7\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-9f7023f0-56b4-4d2b-9e27-31914691add2\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -383,7 +384,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-af18278c-8237-42a9-a3af-0c59ca7a73a7')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-9f7023f0-56b4-4d2b-9e27-31914691add2')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -435,12 +436,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-af18278c-8237-42a9-a3af-0c59ca7a73a7 button.colab-df-convert');\n",
+              "        document.querySelector('#df-9f7023f0-56b4-4d2b-9e27-31914691add2 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-af18278c-8237-42a9-a3af-0c59ca7a73a7');\n",
+              "        const element = document.querySelector('#df-9f7023f0-56b4-4d2b-9e27-31914691add2');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -485,7 +486,7 @@
           "height": 322
         },
         "id": "rWhlXZwLxJRh",
-        "outputId": "56f1b637-b3dc-44ae-f909-73d1afa80b9f"
+        "outputId": "6f344e87-5a31-4f2c-ad90-a697b47d9936"
       },
       "execution_count": 6,
       "outputs": [
@@ -505,7 +506,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-e4cb4b99-c2d7-4f61-9bfa-dd1b927c6a5f\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-dd481d13-f0d1-4276-9241-c8efc73cec71\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -593,7 +594,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e4cb4b99-c2d7-4f61-9bfa-dd1b927c6a5f')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-dd481d13-f0d1-4276-9241-c8efc73cec71')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -645,12 +646,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-e4cb4b99-c2d7-4f61-9bfa-dd1b927c6a5f button.colab-df-convert');\n",
+              "        document.querySelector('#df-dd481d13-f0d1-4276-9241-c8efc73cec71 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-e4cb4b99-c2d7-4f61-9bfa-dd1b927c6a5f');\n",
+              "        const element = document.querySelector('#df-dd481d13-f0d1-4276-9241-c8efc73cec71');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -695,9 +696,9 @@
           "height": 193
         },
         "id": "-aiUNKbsx6C3",
-        "outputId": "f889dacd-45f5-4e32-b911-221bc0c14d30"
+        "outputId": "36857509-005a-4a3a-eb77-f7a1ad5ccafa"
       },
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -749,7 +750,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 7
         }
       ]
     },
@@ -774,9 +775,9 @@
           "height": 449
         },
         "id": "T3Qcmh3X0-Eh",
-        "outputId": "cdb48e6b-291b-4148-939b-fabbbe441622"
+        "outputId": "1d1071c4-5252-4bde-e5bd-3c46b2b14a83"
       },
-      "execution_count": 11,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "display_data",
@@ -815,9 +816,9 @@
           "height": 388
         },
         "id": "ZlHQ0XCT1bku",
-        "outputId": "d34c53ae-7402-40c9-ce79-b75b881afdda"
+        "outputId": "a9b7875b-fad0-4bd7-8a87-4df4d0d873d0"
       },
-      "execution_count": 15,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "display_data",
@@ -852,9 +853,9 @@
           "height": 758
         },
         "id": "yCmIaU4W3SEl",
-        "outputId": "7db7a2c5-abc6-441e-b5af-69fcd476b704"
+        "outputId": "16554ee4-34a9-4a50-f448-7637d858937c"
       },
-      "execution_count": 16,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "display_data",
@@ -881,9 +882,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KGtyW1sY3_m8",
-        "outputId": "210a8000-27d2-44d2-9f64-53795494c50f"
+        "outputId": "9a5ff70c-193a-4a52-93d6-eca931a5dced"
       },
-      "execution_count": 17,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -913,7 +914,7 @@
       "metadata": {
         "id": "75-ugGEK4jpF"
       },
-      "execution_count": 18,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -927,7 +928,7 @@
       "metadata": {
         "id": "cHCjoUnT5HRA"
       },
-      "execution_count": 21,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -940,9 +941,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4gOcMQ4s5jLW",
-        "outputId": "f8098698-21b2-4221-8cf8-582cac6699d8"
+        "outputId": "6b9abfd8-73dc-4e18-95f9-b45eab545168"
       },
-      "execution_count": 22,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -952,7 +953,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 22
+          "execution_count": 14
         }
       ]
     },
@@ -966,9 +967,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FWUCfU9d5oCL",
-        "outputId": "30dad4d3-7f35-426f-8cca-d072f1762585"
+        "outputId": "744c6529-9263-4833-f532-5e3e403b4bb4"
       },
-      "execution_count": 23,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -978,7 +979,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 23
+          "execution_count": 15
         }
       ]
     },
@@ -999,7 +1000,7 @@
       "metadata": {
         "id": "Uao1Ur0M5peN"
       },
-      "execution_count": 24,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -1013,9 +1014,9 @@
           "height": 85
         },
         "id": "jdhggD9n_7Ro",
-        "outputId": "c78cca9d-4eb7-4cc2-a4d0-d6ce9b21e6ec"
+        "outputId": "9f7c8401-ef8f-49e6-c3ac-bd8f2f0e19e1"
       },
-      "execution_count": 25,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1443,7 +1444,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 25
+          "execution_count": 17
         }
       ]
     },
@@ -1458,9 +1459,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0kbtP2dVAFAQ",
-        "outputId": "e6c14fb4-69bc-4e07-d66b-beb6161b9c2d"
+        "outputId": "548ad5b3-0d7b-457c-807c-c7a594b6f7bc"
       },
-      "execution_count": 26,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1470,7 +1471,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 26
+          "execution_count": 18
         }
       ]
     },
@@ -1484,9 +1485,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oFI72RW3AYba",
-        "outputId": "7b2270a5-105b-4435-a6bb-f846777b1c9e"
+        "outputId": "31cbe5e0-df99-4fb7-e724-ac39bb3f9356"
       },
-      "execution_count": 27,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1496,7 +1497,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 27
+          "execution_count": 19
         }
       ]
     },
@@ -1511,9 +1512,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0J0-LX1gAkln",
-        "outputId": "0627da09-2ae0-4105-c1ea-d7628693f4e2"
+        "outputId": "776a32d3-197e-4d42-86b6-74ed6efc61f8"
       },
-      "execution_count": 28,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1524,7 +1525,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 28
+          "execution_count": 20
         }
       ]
     },
@@ -1541,9 +1542,9 @@
           "height": 430
         },
         "id": "Gp4_xuk9Au7y",
-        "outputId": "74fc78ec-62f8-49b8-8f0c-3d0eb00410a8"
+        "outputId": "3494d063-eac3-4d66-c91f-bf315ecbad95"
       },
-      "execution_count": 29,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1568,9 +1569,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CofBv0rnBb7e",
-        "outputId": "c1e3ee9c-ad12-4512-864a-efe129656264"
+        "outputId": "eecdbf9a-2fdd-4900-faef-5dd32645d91c"
       },
-      "execution_count": 30,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -1600,9 +1601,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fC_9sy88B0oB",
-        "outputId": "f0d2ff32-13cb-4e74-b368-0983bb4b42cc"
+        "outputId": "40dd83b5-7ab8-4570-89af-c102c8807c6b"
       },
-      "execution_count": 31,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1612,7 +1613,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 31
+          "execution_count": 23
         }
       ]
     },
@@ -1626,9 +1627,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1nmcCKpxB-va",
-        "outputId": "5da6226c-2c03-41af-bced-4e9b1dd5276a"
+        "outputId": "be9ae6ff-6f17-448e-d785-875792afe9ea"
       },
-      "execution_count": 32,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1638,7 +1639,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 32
+          "execution_count": 24
         }
       ]
     },
@@ -1653,9 +1654,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0X-CtlrUCC2J",
-        "outputId": "6facd46b-bd33-41c8-a56a-b3cc8aeded25"
+        "outputId": "4ddffcb9-8361-4859-f248-2e772fc2a50d"
       },
-      "execution_count": 33,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1666,7 +1667,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 33
+          "execution_count": 25
         }
       ]
     },
@@ -1683,9 +1684,9 @@
           "height": 430
         },
         "id": "hj662PkXCUHJ",
-        "outputId": "b3b69c17-97e1-4f55-9d18-696222350dde"
+        "outputId": "238653fa-a166-43fe-fb78-49ebe6b17289"
       },
-      "execution_count": 34,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1710,9 +1711,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ohJ0wLGaCkKR",
-        "outputId": "c14920a2-e867-426d-edff-895595db73f3"
+        "outputId": "b3fa00bd-4c20-4f15-b3e5-917a707b95ac"
       },
-      "execution_count": 36,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -1752,9 +1753,9 @@
           "height": 406
         },
         "id": "Lol4E3UsC5kZ",
-        "outputId": "5c806b26-3d77-4ca4-e98d-9e90649b616f"
+        "outputId": "6e3d4d32-5e65-4c0b-beb0-81a6f56c10de"
       },
-      "execution_count": 38,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1783,9 +1784,9 @@
           "height": 961
         },
         "id": "1kwop9-OEkCb",
-        "outputId": "83534f64-3f56-4d5f-c475-03b111a981e8"
+        "outputId": "777dced6-f7e1-4d8f-836a-496dab563e56"
       },
-      "execution_count": 40,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1845,8 +1846,8 @@
         "    *   특성들을 스케일링할 필요가 없다.\n",
         "    *   결과를 이해하기 쉽다.\n",
         "*   단점:\n",
-        "    *   과적합(overfitting)되기가 쉽다.\n",
-        "    *   여러가지 규제들을 적용해서 과적합 문제를 해결해야 함.\n",
+        "    *   과대적합(over-fitting)되기가 쉽다.\n",
+        "    *   여러가지 규제들을 적용해서 과대적합 문제를 해결해야 함.\n",
         "*   규제 하이퍼 파라미터(hyperparameter) - 생성자의 파라미터들\n",
         "    *   `max_depth`: decision tree의 최대 깊이.\n",
         "    *   `max_leaf_node`: leaf node의 최댓값.\n",
@@ -1856,12 +1857,31 @@
         "    *   `max_`로 시작하는 파라미터의 값을 증가시키면, 트리의 크기가 커짐.\n",
         "        *   규제가 작아짐.\n",
         "        *   overfitting이 커짐.\n",
-        "    *   `max_`로 시작하는 파라미터 값을 감소시키면, 트리의 크기가 작아지기 때문에 overfitting이 작아짐.\n",
-        "    *   `min_`으로 시작하는 파라미터 값을 증가시키면, 트리의 크기가 작아짐.\n",
+        "    *   `max_`로 시작하는 파라미터 값을 감소시키면, 트리의 크기가 작아지기 때문에 과대적합(over-fitting)이 작아짐.\n",
+        "    *   `min_`으로 시작하는 파라미터 값을 증가시키면, 트리의 크기가 작아지고 과대적합이 줄어듦.\n",
+        "    *   `min_`으로 시작하는 파라미터 값을 감소시키면, 트리의 크기가 커지고 과대적합이 커짐.\n",
         "    "
       ],
       "metadata": {
         "id": "tvUiVwNnQbeO"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 하이퍼 파라미터 튜닝"
+      ],
+      "metadata": {
+        "id": "NOpuoRhfkADJ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "max_depth의 값을 2 ~ 15까지 바꿔가면서 훈련 셋과 테스트 셋에서의 정확도를 계산하고, 시각화."
+      ],
+      "metadata": {
+        "id": "5ZKifTRpkDHY"
       }
     }
   ]
