Gradient Boosting, Histogram-based Gradient Boosting, XGBoost, Light GBM

--- a/lab_ml/ml11_ensemble.ipynb
+++ b/lab_ml/ml11_ensemble.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNcVejfVHdcSwKCrpScTVY6",
+      "authorship_tag": "ABX9TyM6gsQW1aS6WxBviywRoRF7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3265,7 +3265,7 @@
       "cell_type": "markdown",
       "source": [
         "Gradient Boosting\n",
-        "*   깊이(depth)가 얕은 결정 나무들을 순차적으로(직렬로) 연결해서 훈련시킴.\n",
+        "*   **깊이(depth)가 얕은** 결정 나무들을 순차적으로(직렬로) 연결해서 훈련시킴.\n",
         "*   훈련 과정에서, 이전 훈련 단계에서 발생한 오차들을 그 다음 훈련에서 가중치를 주고 훈련시킴.\n",
         "    *   오차들을 학습하는 알고리즘.\n",
         "*   장점: 깊이가 얕은 결정 나무들을 사용하기 때문에, 과대적합이 작아지고 높은 일반화 성능을 기대할 수 있음.\n",
@@ -3409,6 +3409,122 @@
           "text": [
             "train score = 0.930536541746549\n",
             "test score = 0.8780021470348707\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# XGBoost(Extreme Gradient Boosting)"
+      ],
+      "metadata": {
+        "id": "2rnGpIqx3Peh"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from xgboost import XGBClassifier"
+      ],
+      "metadata": {
+        "id": "VeT08t7p5HZE"
+      },
+      "execution_count": 65,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cv = cross_validate(estimator=XGBClassifier(),\n",
+        "                    X=x_train, y=y_train, n_jobs=-1,\n",
+        "                    return_train_score=True)"
+      ],
+      "metadata": {
+        "id": "cXbNLOGv5Qc0"
+      },
+      "execution_count": 66,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('train score =', np.mean(cv['train_score']))\n",
+        "print('test score =', np.mean(cv['test_score']))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "v1nFXke15ej9",
+        "outputId": "329b6106-e538-4b7f-ecb0-330693e9842c"
+      },
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "train score = 0.952953351052942\n",
+            "test score = 0.8776167912934035\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Light GBM"
+      ],
+      "metadata": {
+        "id": "qAwayEcg3et7"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from lightgbm import LGBMClassifier"
+      ],
+      "metadata": {
+        "id": "ucVZ6sXx5jRS"
+      },
+      "execution_count": 68,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cv = cross_validate(estimator=LGBMClassifier(),\n",
+        "                    X=x_train, y=y_train, n_jobs=-1,\n",
+        "                    return_train_score=True)"
+      ],
+      "metadata": {
+        "id": "oXsS5dPY5oDs"
+      },
+      "execution_count": 69,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('train score =', np.mean(cv['train_score']))\n",
+        "print('test score =', np.mean(cv['test_score']))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "P3opXlmc5yh8",
+        "outputId": "41d35b9e-0e41-442c-90e1-77358c8dc3d3"
+      },
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "train score = 0.934577605325741\n",
+            "test score = 0.8805047382838529\n"
           ]
         }
       ]
