--- a/lab_ml/ml12_preprocessing.ipynb
+++ b/lab_ml/ml12_preprocessing.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMdK1lxDmPFrdCGq6ZSNMfy",
+      "authorship_tag": "ABX9TyMEhM/ztIbEItTDWvMMH2wQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -773,7 +773,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 연속형 타입 변수 시각화"
+        "## 연속형 타입 변수 시각화"
       ],
       "metadata": {
         "id": "0R-oiuuI9w38"
@@ -2513,6 +2513,364 @@
           "execution_count": 56
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Column Transformer\n",
+        "\n",
+        "*   컬럼 별로 다른 변환기를 적용하고자 할 때 사용.\n",
+        "    *   카테고리 컬럼들 -> Encoder 적용(OrdinalEncodoer, OneHotEncoder)\n",
+        "    *   숫자 타입 컬럼들 -> PolynomialFeatures, Scaler(StandardScaler, MinMaxScaler)"
+      ],
+      "metadata": {
+        "id": "RdeqlBBeqB9A"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "features.columns"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MeKXylNQqvVl",
+        "outputId": "96b29ba7-94d3-44e7-93f1-161b68f4242b"
+      },
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Index(['island', 'bill_length_mm', 'bill_depth_mm', 'flipper_length_mm',\n",
+              "       'body_mass_g', 'sex'],\n",
+              "      dtype='object')"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 58
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 카테고리 컬럼(변수) 이름들의 리스트\n",
+        "cat_cols = ['island', 'sex']\n",
+        "\n",
+        "# 숫자 타입 컬럼(변수) 이름들의 리스트\n",
+        "num_cols = ['bill_length_mm', 'bill_depth_mm', 'flipper_length_mm', 'body_mass_g']"
+      ],
+      "metadata": {
+        "id": "LxV-rvslq1FN"
+      },
+      "execution_count": 59,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# ColumnTransformer 객체 생성\n",
+        "col_transformer = ColumnTransformer(transformers=[\n",
+        "    ('encoder', OrdinalEncoder(), cat_cols),\n",
+        "    ('scaler', StandardScaler(), num_cols)\n",
+        "])"
+      ],
+      "metadata": {
+        "id": "sfAakgK5rlLO"
+      },
+      "execution_count": 60,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "result = col_transformer.fit_transform(features)"
+      ],
+      "metadata": {
+        "id": "CdKpW8lmtAAH"
+      },
+      "execution_count": 61,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "result"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1NKvK7o3tHd5",
+        "outputId": "4668b70f-dc09-4e8a-c8f0-4cd9dabbcd07"
+      },
+      "execution_count": 62,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 2.        ,  1.        , -0.89604189,  0.7807321 , -1.42675157,\n",
+              "        -0.56847478],\n",
+              "       [ 2.        ,  0.        , -0.82278787,  0.11958397, -1.06947358,\n",
+              "        -0.50628618],\n",
+              "       [ 2.        ,  0.        , -0.67627982,  0.42472926, -0.42637319,\n",
+              "        -1.1903608 ],\n",
+              "       ...,\n",
+              "       [ 0.        ,  1.        ,  1.17338426, -0.74499437,  1.50292796,\n",
+              "         1.91906927],\n",
+              "       [ 0.        ,  0.        ,  0.22108196, -1.20271231,  0.78837197,\n",
+              "         1.23499466],\n",
+              "       [ 0.        ,  1.        ,  1.08181673, -0.54156417,  0.85982757,\n",
+              "         1.48374906]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 62
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "col_transformer.named_transformers_  # dict(key: name, value: transformer)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LXJdcxdAtIFu",
+        "outputId": "cca4bfbe-fe1f-49f6-e45e-02ce93a16534"
+      },
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'encoder': OrdinalEncoder(), 'scaler': StandardScaler()}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 63
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "col_transformer.named_transformers_['encoder'].categories_"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0ky6TgFXt2pF",
+        "outputId": "90209eb7-1710-4340-ff03-9e9b5fa84c64"
+      },
+      "execution_count": 65,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[array(['Biscoe', 'Dream', 'Torgersen'], dtype=object),\n",
+              " array(['Female', 'Male'], dtype=object)]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 65
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "col_transformer.named_transformers_['scaler'].mean_"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Wh8O1jjnuEAH",
+        "outputId": "fe2f75ca-4990-4ac7-806a-626bcd5d7ca4"
+      },
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([  43.99279279,   17.16486486,  200.96696697, 4207.05705706])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 67
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "col_transformer.named_transformers_['scaler'].var_"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KW7RMf3jusQW",
+        "outputId": "4112dc34-6883-47d8-ad66-c82bf2a68674"
+      },
+      "execution_count": 68,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([2.98165246e+01, 3.86624300e+00, 1.95851762e+02, 6.46425423e+05])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 68
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "OneHotEncoder를 사용"
+      ],
+      "metadata": {
+        "id": "INXcNifSu5Gl"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "col_transformer = ColumnTransformer(transformers=[\n",
+        "    ('encoder', OneHotEncoder(), cat_cols),\n",
+        "    ('scaler', StandardScaler(), num_cols)\n",
+        "])"
+      ],
+      "metadata": {
+        "id": "tdno3cimu7pu"
+      },
+      "execution_count": 69,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "result = col_transformer.fit_transform(features)\n",
+        "result"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kcmEe9qtvO-Q",
+        "outputId": "356ef709-dede-4a41-df95-983a653b6ff6"
+      },
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 0.        ,  0.        ,  1.        , ...,  0.7807321 ,\n",
+              "        -1.42675157, -0.56847478],\n",
+              "       [ 0.        ,  0.        ,  1.        , ...,  0.11958397,\n",
+              "        -1.06947358, -0.50628618],\n",
+              "       [ 0.        ,  0.        ,  1.        , ...,  0.42472926,\n",
+              "        -0.42637319, -1.1903608 ],\n",
+              "       ...,\n",
+              "       [ 1.        ,  0.        ,  0.        , ..., -0.74499437,\n",
+              "         1.50292796,  1.91906927],\n",
+              "       [ 1.        ,  0.        ,  0.        , ..., -1.20271231,\n",
+              "         0.78837197,  1.23499466],\n",
+              "       [ 1.        ,  0.        ,  0.        , ..., -0.54156417,\n",
+              "         0.85982757,  1.48374906]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 70
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "result[:5]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lUorle2QvVzn",
+        "outputId": "fcfcc86d-b5ad-4b12-beed-54d6a33c0512"
+      },
+      "execution_count": 71,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 0.        ,  0.        ,  1.        ,  0.        ,  1.        ,\n",
+              "        -0.89604189,  0.7807321 , -1.42675157, -0.56847478],\n",
+              "       [ 0.        ,  0.        ,  1.        ,  1.        ,  0.        ,\n",
+              "        -0.82278787,  0.11958397, -1.06947358, -0.50628618],\n",
+              "       [ 0.        ,  0.        ,  1.        ,  1.        ,  0.        ,\n",
+              "        -0.67627982,  0.42472926, -0.42637319, -1.1903608 ],\n",
+              "       [ 0.        ,  0.        ,  1.        ,  1.        ,  0.        ,\n",
+              "        -1.33556603,  1.0858774 , -0.56928439, -0.94160639],\n",
+              "       [ 0.        ,  0.        ,  1.        ,  0.        ,  1.        ,\n",
+              "        -0.85941488,  1.74702554, -0.78365118, -0.69285199]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 71
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Pipeline을 사용한 모델 훈련, 평가"
+      ],
+      "metadata": {
+        "id": "6xGCePAhv-30"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "*   `LabelEncoder`를 사용해서 target을 인코딩(y).\n",
+        "*   features와 y를 훈련 셋과 테스트 셋으로 나눔(train:test=8:2).\n",
+        "*   `ColumnTransformer`를 생성.\n",
+        "    *   카테고리 컬럼에는 `OneHotEncoder`를 적용.\n",
+        "    *   숫자 타입 컬럼에는 `StandardScaler`를 적용.\n",
+        "*   Estimator를 생성.\n",
+        "    *   `LogisticRegression` 객체 생성.\n",
+        "*   `Pipeline`을 생성.\n",
+        "    *   변환기(ColumnTransformer)와 예측기(LogisticRegression)을 연결.\n",
+        "*   모델 훈련(fit), 평가(score)"
+      ],
+      "metadata": {
+        "id": "Cmny4RNpwHv9"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "3W8MVMTMwTgG"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
